recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:10: error: illegal start of simple expression
  else
  ^