recursion.cons.min.Min.scala.code
def min(l:List[Int]): Int = {
  
	if (l == Nil)
  return l.head
  if(l.head < l.tail.head)
  return l.head
  else

  else
  return min(l.tail)

  
  
}